added phone number

--- a/vijay.html
+++ b/vijay.html
@@ -6,3 +6,6 @@
 <p>
 Vijay is a popular Indian actor, producer, and playback singer known for his work in Tamil cinema. He has a massive fan following and is often referred to as "Thalapathy" (Commander) by his fans. Vijay's films are known for their engaging storylines, dance sequences, and music.
 </p>
+
+
+<p>contact: 15465316</p>
